Complete repository cleanup and comprehensive improvements
- Repository cleanup: Removed test scripts and demos from root directory
- Fixed target_user linking issue by moving definition to utils.c
- Added comprehensive sudo logging documentation for Linux and macOS
- Added author attribution to all source files and documentation
- Enhanced README with cross-platform logging instructions
- Improved code organization and maintainability
- All unit tests and integration tests passing
- Ready for production use

Changes include:
- Cross-platform sudo log viewing instructions
- Professional author attribution throughout codebase
- Clean repository structure with tests in tests/ directory
- Fixed linking issues for test suite
- Comprehensive documentation updates
- Enhanced user experience with platform-specific guidance

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,90 @@ dkms.conf
 
 # debug information files
 *.dwo
+
+# Sudosh-specific build artifacts
+obj/
+bin/
+sudosh
+test_*
+demo_*
+
+# Test files and outputs
+tests/test_results.txt
+tests/*.log
+tests/*.out
+tests/temp_*
+/tmp/sudosh_*
+/tmp/test_*
+
+# Log files
+*.log
+session_*.log
+sudosh_*.log
+
+# History files
+.sudosh_history
+*_history
+
+# Temporary files
+*.tmp
+*.temp
+*~
+.#*
+\#*#
+
+# Core dumps
+core
+core.*
+vgcore.*
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*.vim
+.DS_Store
+Thumbs.db
+
+# Backup files
+*.bak
+*.backup
+*.orig
+
+# Man pages (generated)
+*.1
+*.8
+
+# Security test outputs
+/tmp/sudosh_security_logs/
+/tmp/sudosh_vulnerabilities.log
+/tmp/sudosh_security_report.md
+
+# Coverage and profiling files
+*.gcov
+*.gcda
+*.gcno
+coverage/
+gmon.out
+*.prof
+
+# Documentation build artifacts
+docs/*.html
+docs/*.pdf
+docs/build/
+
+# Runtime files
+*.pid
+*.sock
+*.lock
+
+# Local development
+local/
+dev/
+scratch/
+
+# Environment files
+.env
+.env.local
+.env.*.local
