Add authentication caching similar to sudo behavior
- Implement secure credential caching with 15-minute default timeout
- Add cache file management with strict security (0600 permissions, root-owned)
- Create session isolation with separate cache files per user/TTY
- Implement automatic cache cleanup and expiration handling
- Add cache invalidation on authentication failures
- Provide comprehensive test suite for authentication caching
- Update documentation and man page with caching details
- Bump version to 1.3.2

Features:
- Cache directory: /var/run/sudosh with secure permissions
- Cache structure: username, timestamp, session ID, UID/GID, TTY, hostname
- Cache functions: create, validate, cleanup, and invalidate operations
- Security integration: works seamlessly with existing authentication flow
- User experience: eliminates repeated password prompts within timeout window

The authentication caching provides a familiar sudo-like experience
while maintaining all existing security protections and audit capabilities.
Cache files are automatically managed and cleaned up, with strict
security measures to prevent unauthorized access or tampering.

--- a/src/sudosh.1.in
+++ b/src/sudosh.1.in
@@ -136,6 +136,19 @@ All commands executed in sudosh are automatically logged to \fB~/.sudosh_history
 When the \fB-l\fR option is used, sudosh logs the complete session including all input and output to the specified file. This creates a detailed transcript of the entire session with timestamps.
 
 .SH SECURITY FEATURES
+.SS Authentication Caching
+sudosh implements secure authentication caching similar to sudo:
+.IP \(bu 4
+Successful authentications are cached for 15 minutes by default
+.IP \(bu 4
+Cache files are stored in /var/run/sudosh with strict permissions (0600, root-owned)
+.IP \(bu 4
+Separate cache files per user and TTY for security isolation
+.IP \(bu 4
+Expired cache files are automatically cleaned up
+.IP \(bu 4
+Failed authentications invalidate existing cache entries
+
 .SS Environment Sanitization
 sudosh removes dangerous environment variables such as LD_PRELOAD, CDPATH, and others that could be used for privilege escalation attacks. It sets a secure PATH and appropriate umask.
 
