--- a/src/sudosh.1.in
+++ b/src/sudosh.1.in
@@ -78,8 +78,8 @@ Automatically logs command history to ~/.sudosh_history with timestamps
 
 .SH BUILT-IN COMMANDS
 .TP
-.B help
-Show available commands and usage examples.
+.BR help ", " ?
+Show available commands and usage examples. Both \fBhelp\fR and \fB?\fR display the same help information.
 .TP
 .B commands
 List all available commands, including built-in commands and system commands found in PATH.
@@ -235,14 +235,28 @@ sudosh implements intelligent "gut check" warnings that distinguish between safe
 
 .B Safe Read-Only Operations (No Warning):
 .IP \(bu 4
-.B cat, less, more, head, tail, view, vi, vim, nano
-- File viewing and editing commands on system files
+.B cat, head, tail
+- File viewing commands on system files
 .IP \(bu 4
 .B ls, find, locate, grep
 - File listing and searching commands
 .IP \(bu 4
 .B ps, top, htop, id, whoami, date, uptime
 - System information commands
+
+.B Blocked Commands (Security Risk):
+.IP \(bu 4
+.B Interactive editors: vi, vim, emacs, nano
+- Can execute shell commands and bypass security (use sudoedit instead)
+.IP \(bu 4
+.B Dangerous pagers: less, more, most
+- Can execute shell commands (!) or spawn editors (v) and bypass security
+.IP \(bu 4
+.B Shell commands: bash, sh, zsh, csh
+- Direct shell access is not permitted
+.IP \(bu 4
+.B Pipes and redirection: |, >, >>, <
+- Only single commands are supported; file redirection is blocked for security
 
 .B Dangerous Operations (Warning Required):
 .IP \(bu 4
